# algorithms_4sem

01_lab/: CMakeLists.txt  main.cpp
01_lab/inc/: func.h
02_03_lab/: CMakeLists.txt  main.cpp
02_03_lab/data/: input.txt
02_03_lab/inc/: func.h
02_lab/: CMakeLists.txt  main.cpp
02_lab/inc/: func.h
04_05_lab/: CMakeLists.txt  main.cpp
04_05_lab/inc/: func.h  googleTestFunc.h
04_05_lab/tests/: test.h  testInput1.txt  testInput2.txt  testInput3.txt
08_lab/: CMakeLists.txt  main.cpp
08_lab/data/: input.txt
08_lab/inc/: func.h
